--- a/apps/chrome-bookmark-categorizer-visualizer/src/index.html
+++ b/apps/chrome-bookmark-categorizer-visualizer/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ChromeBookmarkCategorizerVisualizer</title>
+    <title>Tab Categorizer</title>
     <base href="/" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
